c/torch_api_generated.h

void atg_cudnn_convolution_transpose(tensor *, tensor self, tensor weight, tensor bias, int64_t *padding_data, int padding_len, int64_t *output_padding_data, int output_padding_len, int64_t *stride_data, int stride_len, int64_t *dilation_data, int dilation_len, int64_t groups, int benchmark, int deterministic);
void atg_cudnn_convolution_transpose_backward_bias(tensor *, tensor grad_output);
void atg_cudnn_convolution_transpose_backward_input(tensor *, tensor grad_output, tensor weight, int64_t *padding_data, int padding_len, int64_t *stride_data, int stride_len, int64_t *dilation_data, int dilation_len, int64_t groups, int benchmark, int deterministic);
void atg_cudnn_convolution_transpose_backward_weight(tensor *, int64_t *weight_size_data, int weight_size_len, tensor grad_output, tensor self, int64_t *padding_data, int padding_len, int64_t *stride_data, int stride_len, int64_t *dilation_data, int dilation_len, int64_t groups, int benchmark, int deterministic);
void atg_cudnn_grid_sampler(tensor *, tensor self, tensor grid);
void atg_cudnn_grid_sampler_backward(tensor *, tensor self, tensor grid, tensor grad_output);
void atg_cumprod(tensor *, tensor self, int64_t dim);
void atg_cumprod1(tensor *, tensor self, int64_t dim, int dtype);
void atg_cumprod_out(tensor *, tensor result, tensor self, int64_t dim);
void atg_cumprod_out1(tensor *, tensor result, tensor self, int64_t dim, int dtype);
void atg_cumsum(tensor *, tensor self, int64_t dim);
void atg_cumsum1(tensor *, tensor self, int64_t dim, int dtype);
void atg_cumsum_out(tensor *, tensor result, tensor self, int64_t dim);
void atg_cumsum_out1(tensor *, tensor result, tensor self, int64_t dim, int dtype);
void atg_det(tensor *, tensor self);
void atg_detach(tensor *, tensor self);
void atg_detach_(tensor *, tensor self);
void atg_diag(tensor *, tensor self, int64_t diagonal);
void atg_diag_embed(tensor *, tensor self, int64_t offset, int64_t dim1, int64_t dim2);
void atg_diag_out(tensor *, tensor result, tensor self, int64_t diagonal);
void atg_diagflat(tensor *, tensor self, int64_t offset);
void atg_diagonal(tensor *, tensor self, int64_t offset, int64_t dim1, int64_t dim2);
void atg_digamma(tensor *, tensor self);
void atg_digamma_(tensor *, tensor self);
void atg_digamma_out(tensor *, tensor result, tensor self);
void atg_dist(tensor *, tensor self, tensor other);
void atg_div(tensor *, tensor self, tensor other);
void atg_div1(tensor *, tensor self, scalar other);
void atg_div_(tensor *, tensor self, tensor other);
void atg_div_1(tensor *, tensor self, scalar other);
void atg_div_out(tensor *, tensor result, tensor self, tensor other);
void atg_dot(tensor *, tensor self, tensor tensor);
void atg_dot_out(tensor *, tensor result, tensor self, tensor tensor);
void atg_dropout(tensor *, tensor input, double p, int train);
void atg_dropout_(tensor *, tensor self, double p, int train);
void atg_eig(tensor *, tensor self, int eigenvectors);
void atg_eig_out(tensor *, tensor e, tensor v, tensor self, int eigenvectors);
void atg_elu(tensor *, tensor self);
void atg_elu_(tensor *, tensor self);
void atg_elu_out(tensor *, tensor output, tensor self);
void atg_embedding(tensor *, tensor weight, tensor indices, int64_t padding_idx, int scale_grad_by_freq, int sparse);
void atg_embedding_backward(tensor *, tensor grad, tensor indices, int64_t num_weights, int64_t padding_idx, int scale_grad_by_freq, int sparse);
void atg_embedding_bag(tensor *, tensor weight, tensor indices, tensor offsets, int scale_grad_by_freq, int64_t mode, int sparse);
void atg_embedding_dense_backward(tensor *, tensor grad, tensor indices, int64_t num_weights, int64_t padding_idx, int scale_grad_by_freq);
void atg_embedding_renorm_(tensor *, tensor self, tensor indices, double max_norm, double norm_type);
void atg_embedding_sparse_backward(tensor *, tensor grad, tensor indices, int64_t num_weights, int64_t padding_idx, int scale_grad_by_freq);
void atg_empty(tensor *, int64_t *size_data, int size_len, int options_kind, int options_device);
void atg_empty_like(tensor *, tensor self);
void atg_empty_like1(tensor *, tensor self, int options_kind, int options_device);
void atg_empty_out(tensor *, tensor result, int64_t *size_data, int size_len);
void atg_empty_strided(tensor *, int64_t *size_data, int size_len, int64_t *stride_data, int stride_len, int options_kind, int options_device);
void atg_eq(tensor *, tensor self, scalar other);
void atg_eq1(tensor *, tensor self, tensor other);
void atg_eq_(tensor *, tensor self, scalar other);
void atg_eq_1(tensor *, tensor self, tensor other);
void atg_eq_out(tensor *, tensor result, tensor self, scalar other);
void atg_eq_out1(tensor *, tensor result, tensor self, tensor other);
void atg_erf(tensor *, tensor self);
void atg_erf_(tensor *, tensor self);
void atg_erf_out(tensor *, tensor result, tensor self);
void atg_erfc(tensor *, tensor self);
void atg_erfc_(tensor *, tensor self);
void atg_erfc_out(tensor *, tensor result, tensor self);
void atg_erfinv(tensor *, tensor self);
void atg_erfinv_(tensor *, tensor self);
void atg_erfinv_out(tensor *, tensor result, tensor self);
void atg_exp(tensor *, tensor self);
void atg_exp_(tensor *, tensor self);
void atg_exp_out(tensor *, tensor result, tensor self);
void atg_expand(tensor *, tensor self, int64_t *size_data, int size_len, int implicit);
void atg_expand_as(tensor *, tensor self, tensor other);
void atg_expm1(tensor *, tensor self);
void atg_expm1_(tensor *, tensor self);
void atg_expm1_out(tensor *, tensor result, tensor self);
void atg_exponential_(tensor *, tensor self, double lambd);
void atg_eye(tensor *, int64_t n, int options_kind, int options_device);
void atg_eye1(tensor *, int64_t n, int64_t m, int options_kind, int options_device);
void atg_eye_out(tensor *, tensor result, int64_t n);
void atg_eye_out1(tensor *, tensor result, int64_t n, int64_t m);
void atg_feature_alpha_dropout(tensor *, tensor input, double p, int train);
void atg_feature_alpha_dropout_(tensor *, tensor self, double p, int train);
void atg_feature_dropout(tensor *, tensor input, double p, int train);
void atg_feature_dropout_(tensor *, tensor self, double p, int train);
void atg_fft(tensor *, tensor self, int64_t signal_ndim, int normalized);
void atg_fill_(tensor *, tensor self, scalar value);
void atg_fill_1(tensor *, tensor self, tensor value);
void atg_flatten(tensor *, tensor self, int64_t start_dim, int64_t end_dim);
void atg_flip(tensor *, tensor self, int64_t *dims_data, int dims_len);
void atg_floor(tensor *, tensor self);
void atg_floor_(tensor *, tensor self);
void atg_floor_out(tensor *, tensor result, tensor self);
void atg_fmod(tensor *, tensor self, scalar other);
void atg_fmod1(tensor *, tensor self, tensor other);
void atg_fmod_(tensor *, tensor self, scalar other);
void atg_fmod_1(tensor *, tensor self, tensor other);
void atg_fmod_out(tensor *, tensor result, tensor self, scalar other);
void atg_fmod_out1(tensor *, tensor result, tensor self, tensor other);
void atg_frac(tensor *, tensor self);
void atg_frac_(tensor *, tensor self);
void atg_frac_out(tensor *, tensor result, tensor self);
void atg_fractional_max_pool2d(tensor *, tensor self, int64_t *kernel_size_data, int kernel_size_len, int64_t *output_size_data, int output_size_len, tensor random_samples);
void atg_fractional_max_pool2d_backward(tensor *, tensor grad_output, tensor self, int64_t *kernel_size_data, int kernel_size_len, int64_t *output_size_data, int output_size_len, tensor indices);
void atg_fractional_max_pool2d_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, int64_t *kernel_size_data, int kernel_size_len, int64_t *output_size_data, int output_size_len, tensor indices);
void atg_fractional_max_pool2d_out(tensor *, tensor output, tensor indices, tensor self, int64_t *kernel_size_data, int kernel_size_len, int64_t *output_size_data, int output_size_len, tensor random_samples);
void atg_frobenius_norm(tensor *, tensor self);
void atg_frobenius_norm1(tensor *, tensor self, int64_t *dim_data, int dim_len, int keepdim);
void atg_frobenius_norm_out(tensor *, tensor result, tensor self, int64_t *dim_data, int dim_len, int keepdim);