torch-sys/src/c_generated.rs

    pub fn atg_cudnn_convolution_transpose(self_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, padding_data: *const i64, padding_len: c_int, output_padding_data: *const i64, output_padding_len: c_int, stride_data: *const i64, stride_len: c_int, dilation_data: *const i64, dilation_len: c_int, groups_: i64, benchmark_: c_int, deterministic_: c_int) -> *mut *mut C_tensor;
    pub fn atg_cudnn_convolution_transpose_backward_bias(grad_output_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_cudnn_convolution_transpose_backward_input(grad_output_: *mut C_tensor, weight_: *mut C_tensor, padding_data: *const i64, padding_len: c_int, stride_data: *const i64, stride_len: c_int, dilation_data: *const i64, dilation_len: c_int, groups_: i64, benchmark_: c_int, deterministic_: c_int) -> *mut *mut C_tensor;
    pub fn atg_cudnn_convolution_transpose_backward_weight(weight_size_data: *const i64, weight_size_len: c_int, grad_output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int, stride_data: *const i64, stride_len: c_int, dilation_data: *const i64, dilation_len: c_int, groups_: i64, benchmark_: c_int, deterministic_: c_int) -> *mut *mut C_tensor;
    pub fn atg_cudnn_grid_sampler(self_: *mut C_tensor, grid_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_cudnn_grid_sampler_backward(self_: *mut C_tensor, grid_: *mut C_tensor, grad_output_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_cumprod(self_: *mut C_tensor, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_cumprod1(self_: *mut C_tensor, dim_: i64, dtype_: c_int) -> *mut *mut C_tensor;
    pub fn atg_cumprod_out(result_: *mut C_tensor, self_: *mut C_tensor, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_cumprod_out1(result_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, dtype_: c_int) -> *mut *mut C_tensor;
    pub fn atg_cumsum(self_: *mut C_tensor, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_cumsum1(self_: *mut C_tensor, dim_: i64, dtype_: c_int) -> *mut *mut C_tensor;
    pub fn atg_cumsum_out(result_: *mut C_tensor, self_: *mut C_tensor, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_cumsum_out1(result_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, dtype_: c_int) -> *mut *mut C_tensor;
    pub fn atg_det(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_detach(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_detach_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_diag(self_: *mut C_tensor, diagonal_: i64) -> *mut *mut C_tensor;
    pub fn atg_diag_embed(self_: *mut C_tensor, offset_: i64, dim1_: i64, dim2_: i64) -> *mut *mut C_tensor;
    pub fn atg_diag_out(result_: *mut C_tensor, self_: *mut C_tensor, diagonal_: i64) -> *mut *mut C_tensor;
    pub fn atg_diagflat(self_: *mut C_tensor, offset_: i64) -> *mut *mut C_tensor;
    pub fn atg_diagonal(self_: *mut C_tensor, offset_: i64, dim1_: i64, dim2_: i64) -> *mut *mut C_tensor;
    pub fn atg_digamma(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_digamma_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_digamma_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_dist(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_div(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_div1(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_div_(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_div_1(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_div_out(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_dot(self_: *mut C_tensor, tensor_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_dot_out(result_: *mut C_tensor, self_: *mut C_tensor, tensor_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_dropout(input_: *mut C_tensor, p_: f64, train_: c_int) -> *mut *mut C_tensor;
    pub fn atg_dropout_(self_: *mut C_tensor, p_: f64, train_: c_int) -> *mut *mut C_tensor;
    pub fn atg_eig(self_: *mut C_tensor, eigenvectors_: c_int) -> *mut *mut C_tensor;
    pub fn atg_eig_out(e_: *mut C_tensor, v_: *mut C_tensor, self_: *mut C_tensor, eigenvectors_: c_int) -> *mut *mut C_tensor;
    pub fn atg_elu(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_elu_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_elu_out(output_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_embedding(weight_: *mut C_tensor, indices_: *mut C_tensor, padding_idx_: i64, scale_grad_by_freq_: c_int, sparse_: c_int) -> *mut *mut C_tensor;
    pub fn atg_embedding_backward(grad_: *mut C_tensor, indices_: *mut C_tensor, num_weights_: i64, padding_idx_: i64, scale_grad_by_freq_: c_int, sparse_: c_int) -> *mut *mut C_tensor;
    pub fn atg_embedding_bag(weight_: *mut C_tensor, indices_: *mut C_tensor, offsets_: *mut C_tensor, scale_grad_by_freq_: c_int, mode_: i64, sparse_: c_int) -> *mut *mut C_tensor;
    pub fn atg_embedding_dense_backward(grad_: *mut C_tensor, indices_: *mut C_tensor, num_weights_: i64, padding_idx_: i64, scale_grad_by_freq_: c_int) -> *mut *mut C_tensor;
    pub fn atg_embedding_renorm_(self_: *mut C_tensor, indices_: *mut C_tensor, max_norm_: f64, norm_type_: f64) -> *mut *mut C_tensor;
    pub fn atg_embedding_sparse_backward(grad_: *mut C_tensor, indices_: *mut C_tensor, num_weights_: i64, padding_idx_: i64, scale_grad_by_freq_: c_int) -> *mut *mut C_tensor;
    pub fn atg_empty(size_data: *const i64, size_len: c_int, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_empty_like(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_empty_like1(self_: *mut C_tensor, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_empty_out(result_: *mut C_tensor, size_data: *const i64, size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_empty_strided(size_data: *const i64, size_len: c_int, stride_data: *const i64, stride_len: c_int, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_eq(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_eq1(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_eq_(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_eq_1(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_eq_out(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_eq_out1(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_erf(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_erf_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_erf_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_erfc(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_erfc_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_erfc_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_erfinv(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_erfinv_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_erfinv_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_exp(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_exp_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_exp_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_expand(self_: *mut C_tensor, size_data: *const i64, size_len: c_int, implicit_: c_int) -> *mut *mut C_tensor;
    pub fn atg_expand_as(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_expm1(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_expm1_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_expm1_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_exponential_(self_: *mut C_tensor, lambd_: f64) -> *mut *mut C_tensor;
    pub fn atg_eye(n_: i64, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_eye1(n_: i64, m_: i64, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_eye_out(result_: *mut C_tensor, n_: i64) -> *mut *mut C_tensor;
    pub fn atg_eye_out1(result_: *mut C_tensor, n_: i64, m_: i64) -> *mut *mut C_tensor;
    pub fn atg_feature_alpha_dropout(input_: *mut C_tensor, p_: f64, train_: c_int) -> *mut *mut C_tensor;
    pub fn atg_feature_alpha_dropout_(self_: *mut C_tensor, p_: f64, train_: c_int) -> *mut *mut C_tensor;
    pub fn atg_feature_dropout(input_: *mut C_tensor, p_: f64, train_: c_int) -> *mut *mut C_tensor;
    pub fn atg_feature_dropout_(self_: *mut C_tensor, p_: f64, train_: c_int) -> *mut *mut C_tensor;
    pub fn atg_fft(self_: *mut C_tensor, signal_ndim_: i64, normalized_: c_int) -> *mut *mut C_tensor;
    pub fn atg_fill_(self_: *mut C_tensor, value_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_fill_1(self_: *mut C_tensor, value_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_flatten(self_: *mut C_tensor, start_dim_: i64, end_dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_flip(self_: *mut C_tensor, dims_data: *const i64, dims_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_floor(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_floor_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_floor_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_fmod(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_fmod1(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_fmod_(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_fmod_1(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_fmod_out(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_fmod_out1(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_frac(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_frac_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_frac_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_fractional_max_pool2d(self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, output_size_data: *const i64, output_size_len: c_int, random_samples_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_fractional_max_pool2d_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, output_size_data: *const i64, output_size_len: c_int, indices_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_fractional_max_pool2d_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, output_size_data: *const i64, output_size_len: c_int, indices_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_fractional_max_pool2d_out(output_: *mut C_tensor, indices_: *mut C_tensor, self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, output_size_data: *const i64, output_size_len: c_int, random_samples_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_frobenius_norm(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_frobenius_norm1(self_: *mut C_tensor, dim_data: *const i64, dim_len: c_int, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_frobenius_norm_out(result_: *mut C_tensor, self_: *mut C_tensor, dim_data: *const i64, dim_len: c_int, keepdim_: c_int) -> *mut *mut C_tensor;
